--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,4 +1,4 @@
-<nav>
-    <a href="../">Accueil</a>
-    <a href="../offres">Offres</a>
+<nav class="p-80 bg-red-600">
+    <a href="../" class="text-pink-700 hover:text-teal-400 underline font-medium transition duration-300">Accueil</a>
+    <a href="../offres" class="text-pink-700 hover:text-teal-400 underline font-medium transition duration-300">Offres</a>
 </nav>
