--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -21,6 +21,7 @@ const { nomMaison, adresse, prix, surface, nbChambres, nbSdb, favori, imgUrl } =
         <p class="text-blue-300"><strong>Surface:</strong> {surface} m²</p>
         <p class="text-blue-300"><strong>Chambres:</strong> {nbChambres}</p>
         <p class="text-blue-300"><strong>Salles de bain:</strong> {nbSdb}</p>
+        {favori && <p class="text-pink-500 font-bold">★ Favori</p>}
     </div>
 </div>
 
