--- a/src/pages/offres.astro
+++ b/src/pages/offres.astro
@@ -19,13 +19,13 @@ const offres = await getOffres();
             <span x-show="showFavorites">Afficher tout</span>
         </button>
 
-        <div x-show="!showFavorites" class="flex flex-wrap justify-center mt-4">
+        <div x-show="!showFavorites" class="grid grid-cols-3 items-stretch flex-wrap justify-center mt-4">
             {offres.map((offre) => (
                 <Card {...offre} />
             ))}
         </div>
 
-        <div x-show="showFavorites" class="flex flex-wrap justify-center mt-4">
+        <div x-show="showFavorites" class="grid grid-cols-3 items-stretch flex-wrap justify-center mt-4">
             {offres.map((offre) => offre.favori && (
                 <Card {...offre} />
             ))}
