--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,17 @@
 ---
 import Header from "../components/Header.astro";
+import Card from"../components/Card.astro";
 import Base from "../layouts/Base.astro";
+import { getOffres } from '../backend.mjs';
+
+const offres = await getOffres();
 ---
 
 <Base titre="Accueil">
 	<h1 class="text-4xl font-bold text-center text-green-200 uppercase tracking-wider my-6">Accueil</h1>
+	<div class="p-4 flex flex-wrap justify-center mt-4">
+        {offres.map((offre) => offre.favori && (
+            <Card {...offre} />
+        ))}
+    </div>
 </Base>
