--- a/src/pages/offres/index.astro
+++ b/src/pages/offres/index.astro
@@ -1,8 +1,8 @@
 ---
-import Header from "../components/Header.astro";
-import Card from"../components/Card.astro";
-import Base from "../layouts/Base.astro";
-import { getOffres } from '../backend.mjs';
+import Header from "../../components/Header.astro";
+import Card from"../../components/Card.astro";
+import Base from "../../layouts/Base.astro";
+import { getOffres } from '../../backend.mjs';
 
 const offres = await getOffres();
 ---
