Page [surface].astro non fonctionelle

--- a/src/pages/offres/index.astro
+++ b/src/pages/offres/index.astro
@@ -56,4 +56,5 @@ const offres = await getOffres();
             ))}
         </div>
     </div>
+    <a href={`/offres/surface/${80}`}>Voir les maisons de plus de 80m²</a>
 </Base>
