--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -26,6 +26,7 @@ const { nomMaison, adresse, prix, surface, nbChambres, nbSdb, favori, imgUrl, id
         {favori && <p class="text-pink-500 font-bold">★ Favori</p>}
         <a href={`/offres/${id}`}>Voir plus</a>
     </div>
+    <a href={`/offres/add`}>Ajouter une</a>
 </div>
 
 
