--- a/src/pages/offres/add.astro
+++ b/src/pages/offres/add.astro
@@ -17,5 +17,8 @@ if (Astro.request.method === "POST") {
     <input type="number" name="nbSdb" placeholder="Nombre de salles de bain"  />
     <input type="number" name="nbChambres" placeholder="Nombre de chambres"  />
     <input type="number" name="surface" placeholder="Superficie"  />
+    <input type="text" name="adresse" placeholder="Adresse de la maison" />
+    <input type="file" name="images" accept="image/png, image/jpeg, image/webp" />
+    <input type="checkbox" name="favori"/><span>Favori</span>
     <button type="submit">Ajouter</button>
 </form>
