--- a/src/pages/offres/index.astro
+++ b/src/pages/offres/index.astro
@@ -3,12 +3,38 @@ import Header from "../../components/Header.astro";
 import Card from"../../components/Card.astro";
 import Base from "../../layouts/Base.astro";
 import { getOffres } from '../../backend.mjs';
+import { filterByPrix } from '../../backend.mjs';
+export const prerender = false;
 
-const offres = await getOffres();
+let offres;
+let message = '';
+if (Astro.request.method === "POST") {
+    const data = await Astro.request.formData();
+    const minPrix = parseInt(data.get("minPrix") as string);
+    const maxPrix = parseInt(data.get("maxPrix") as string);
+
+    if (minPrix > 0 && maxPrix > 0 && maxPrix > minPrix) {
+        offres = await filterByPrix(minPrix, maxPrix);
+        if (offres.length === 0) {
+            message = `Pas d'offres entre ${minPrix}€ et ${maxPrix}€`;
+        } else {
+            message = `Liste des offres entre ${minPrix}€ et ${maxPrix}€`;
+        }
+    } else {
+        message = "Veuillez entrer des valeurs valides pour le prix.";
+    }
+} else {
+    offres = await getOffres();
+}
 ---
 
 <Base titre="Offres">
     <h1 class="text-4xl font-bold text-center text-green-200 uppercase tracking-wider my-6">Offres</h1>
+    <form action="/offres" method="POST">
+        <input type="number" name="minPrix" placeholder="Prix minimum" />
+        <input type="number" name="maxPrix" placeholder="Prix maximum" />
+        <input type="submit" value="Filtrer par prix" />
+    </form>
     <div x-data="{ showFavorites: false, view: 'grid' }" class="p-4">
         <div class="flex gap-4 mb-4">
             <button 
@@ -32,29 +58,30 @@ const offres = await getOffres();
             <span x-show="showFavorites">Afficher tout</span>
         </button>
         <div x-show="!showFavorites && view === 'grid'" class="grid grid-cols-3 items-stretch flex-wrap justify-center mt-4">
-            {offres.map((offre) => (
+            {offres?.map((offre) => (
                 <Card {...offre} />
             ))}
         </div>
         <div x-show="showFavorites && view === 'grid'" class="grid grid-cols-3 items-stretch flex-wrap justify-center mt-4">
-            {offres.map((offre) => offre.favori && (
+            {offres?.map((offre) => offre.favori && (
                 <Card {...offre} />
             ))}
         </div>
         <div x-show="!showFavorites && view === 'list'" class="flex flex-col gap-4 mt-4">
-            {offres.map((offre) => (
+            {offres?.map((offre) => (
                 <div>
                     <Card {...offre} />
                 </div>
             ))}
         </div>
         <div x-show="showFavorites && view === 'list'" class="flex flex-col gap-4 mt-4">
-            {offres.map((offre) => offre.favori && (
+            {offres?.map((offre) => offre.favori && (
                 <div>
                     <Card {...offre} />
                 </div>
             ))}
         </div>
     </div>
-    <a href={`/offres/surface/${80}`}>Voir les maisons de plus de 80m²</a>
+    <a href={`/offres/surface/${80}`}>Voir les maisons de plus de 80m²</a></br>
+    <a href={`/offres/add`}>Ajouter une maison</a>
 </Base>
