--- a/src/pages/offres/add.astro
+++ b/src/pages/offres/add.astro
@@ -10,15 +10,15 @@ if (Astro.request.method === "POST") {
     message = response.message;
 }
 ---
-<h1 class="text-lg">Ajouter une offre</h1>
+<h1 class="text-4xl m-2">Ajouter une offre</h1>
 <form action="/offres/add" method="POST" enctype="multipart/form-data">
-    <input type="text" name="nomMaison" placeholder="Nom de la maison" required class="w-full mt-2 p-2 border border-gray-300 rounded-md" />
-    <input type="number" name="prix" placeholder="Prix" />
-    <input type="number" name="nbSdb" placeholder="Nombre de salles de bain"  />
-    <input type="number" name="nbChambres" placeholder="Nombre de chambres"  />
-    <input type="number" name="surface" placeholder="Superficie"  />
-    <input type="text" name="adresse" placeholder="Adresse de la maison" />
-    <input type="file" name="images" accept="image/png, image/jpeg, image/webp" />
-    <input type="checkbox" name="favori"/><span>Favori</span>
+    <input type="text" name="nomMaison" placeholder="Nom de la maison" required class="w-full mt-3 p-2 border border-gray-300 rounded-md ml-2" />
+    <input type="number" name="prix" placeholder="Prix" class="w-full mt-3 p-2 border border-gray-300 rounded-md ml-2" />
+    <input type="number" name="nbSdb" placeholder="Nombre de salles de bain" class="w-full mt-3 p-2 border border-gray-300 rounded-md ml-2" />
+    <input type="number" name="nbChambres" placeholder="Nombre de chambres" class="w-full mt-3 p-2 border border-gray-300 rounded-md ml-2" />
+    <input type="number" name="surface" placeholder="Superficie" class="w-full mt-3 p-2 border border-gray-300 rounded-md ml-2" />
+    <input type="text" name="adresse" placeholder="Adresse de la maison" class="w-full mt-3 p-2 border border-gray-300 rounded-md ml-2" />
+    <input type="file" name="images" accept="image/png, image/jpeg, image/webp" class="mt-3 ml-2" /></br>
+    <input type="checkbox" name="favori" class="mt-4 ml-2"/><span class="ml-2">Favori</span>
     <button type="submit">Ajouter</button>
 </form>
