--- a/src/pages/offres/[id].astro
+++ b/src/pages/offres/[id].astro
@@ -4,6 +4,9 @@ import Base  from '../../layouts/Base.astro';
 export const prerender = false;
 const { id } = Astro.params;
 const offre = await getOffre(id);
+if (!offre) {
+    throw new Error(`Aucune offre trouvée pour l'ID : ${id}`);
+}
 ---
 
 <Base titre={offre.nomMaison}>
